feat(registration): complete user registration feature - add validators to check req.body - create sequelize models and migrations - create endpoint for registration - create endpoint for verification - add email helper to send emails to users after registration
[Finishes #164270478]

--- a/.env.sample
+++ b/.env.sample
@@ -2,3 +2,10 @@ DB_HOST=
 DB_USERNAME=
 DB_PASSWORD=
 DB_DATABASE=
+PORT=
+JWT_SECRET=
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_ADDRESS=
+EMAIL_PASSWORD=
+HOST_URL=
