--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "A Social platform for the creative at heart",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint routes models config index.js",
+    "lint": "eslint controllers routes models config index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "db-migrate": "sequelize db:migrate"
+    "db-migrate": "sequelize db:migrate",
+    "start-dev": "babel-watch index.js",
+    "start": "babel-node index.js"
   },
   "author": "Andela Simulations Programme",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^3.0.4",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "dotenv": "^6.2.0",
@@ -19,21 +22,31 @@
     "express": "^4.16.3",
     "express-jwt": "^5.3.1",
     "express-session": "^1.15.6",
-    "jsonwebtoken": "^8.3.0",
+    "express-validator": "^5.3.1",
+    "jsonwebtoken": "^8.5.0",
     "method-override": "^2.3.10",
     "methods": "^1.1.2",
     "mongoose": "^5.2.2",
     "mongoose-unique-validator": "^2.0.1",
     "morgan": "^1.9.0",
+    "nodemailer": "^5.1.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "pg": "^7.8.1",
     "request": "^2.87.0",
-    "sequelize": "^4.42.1",
+    "sequelize": "^4.42.0",
+    "shortid": "^2.2.14",
     "slug": "^0.9.1",
     "underscore": "^1.9.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/register": "^7.0.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-watch": "^2.0.7",
+    "babel-preset-es2015": "^6.24.1",
     "eslint": "^5.14.1",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0"
