--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A Social platform for the creative at heart",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --exit",
+    "coverage": "mocha --reporter mochawesome"
   },
   "author": "Andela Simulations Programme",
   "license": "MIT",
@@ -28,5 +29,11 @@
     "request": "^2.87.0",
     "slug": "^0.9.1",
     "underscore": "^1.9.1"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.1",
+    "mocha": "^6.0.2",
+    "mochawesome": "^3.1.1"
   }
 }
