--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "sequelize": "^4.42.0",
     "shortid": "^2.2.14",
     "slug": "^0.9.1",
+    "swagger-ui-express": "^4.0.2",
     "underscore": "^1.9.1"
   },
   "devDependencies": {
