--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "test": "npm run db-migrate && mocha test/index.js --timeout=20000 --require babel-register --exit",
     "start": "node_modules/.bin/sequelize db:migrate && babel-node index.js",
     "start:dev": "babel-watch index.js",
-    "coveralls": "nyc --reporter=lcov --reporter=text-lcov npm run test",
-    "postinstall": "npm i sequelize-cli babel-cli -g"
+    "coveralls": "nyc --reporter=lcov --reporter=text-lcov npm run test"
   },
   "author": "Andela Simulations Programme",
   "license": "MIT",
@@ -38,6 +37,7 @@
     "pg": "^7.8.1",
     "request": "^2.87.0",
     "sequelize": "^4.42.0",
+    "sequelize-cli": "^5.4.0",
     "shortid": "^2.2.14",
     "slug": "^0.9.1",
     "underscore": "^1.9.1"
@@ -60,7 +60,6 @@
     "mocha": "^6.0.2",
     "mochawesome": "^3.1.1",
     "nyc": "^13.3.0",
-    "sequelize-cli": "^5.4.0",
     "underscore": "^1.9.1"
   }
 }
