--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: node_js
 node_js:
- - "10"
+  - "10"
 services:
- - postgresql
+  - postgresql
 before_script:
- - psql -c 'create database vidarapp;' -U postgres
-
+  - psql -c 'create database vidarapp;' -U postgres
 script:
- - npm install && npm install sequelize-cli -g
- - npm run test
- 
+  - npm install && npm install sequelize-cli -g
+  - npm run test
+after_success: 
+  - npm run coverage
