--- a/package.json
+++ b/package.json
@@ -4,16 +4,15 @@
   "description": "A Social platform for the creative at heart",
   "main": "index.js",
   "scripts": {
-    "coverage": "npm run db-migrate && mocha --reporter mochawesome --timeout=20000 --require babel-register --exit",
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
     "db-migrate": "sequelize db:migrate",
     "db:undo-migration": "sequelize db:migrate:undo:all",
     "lint": "eslint routes models config test index.js",
-    "test": "npm run db:undo-migration && npm run db-migrate && mocha test/index.js --timeout=20000 --require babel-register --exit",
-    "start": "sequelize db:migrate && node dist/index",
+    "start": "sequelize db:migrate && npm run build && babel-node index.js",
     "start:dev": "babel-watch index.js",
     "build": "rm -rf dist && babel ./ -d ./dist --copy-files --ignore ./node_modules",
     "postinstall": "npm run build",
-    "coveralls": "nyc --reporter=lcov --reporter=text-lcov npm run test"
+    "test": "npm run db:undo-migration && npm run db-migrate && nyc --reporter=lcov --reporter=text mocha test/index.js --timeout=20000 --require babel-register --exit"
   },
   "author": "Andela Simulations Programme",
   "license": "MIT",
@@ -53,7 +52,7 @@
     "underscore": "^1.9.1"
   },
   "devDependencies": {
-    "babel-watch": "^2.0.7",
+    "babel-watch": "^7.0.0",
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
     "coveralls": "^3.0.3",
