--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "morgan": "^1.9.0",
     "nodemailer": "^5.1.1",
     "passport": "^0.4.0",
+    "passport-facebook": "^3.0.0",
     "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
     "pg": "^7.8.1",
