--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "coverage": "npm run db-migrate && mocha --reporter mochawesome --timeout=20000 --require babel-register --exit",
     "db-migrate": "sequelize db:migrate",
     "db:undo-migration": "sequelize db:migrate:undo:all",
-    "lint": "eslint routes models config test index.js",
+    "lint": "eslint . --ext .js",
     "test": "npm run db:undo-migration && npm run db-migrate && mocha test/index.js --timeout=20000 --require babel-register --exit",
     "start": "sequelize db:migrate && node dist/index",
     "start:dev": "babel-watch index.js",
@@ -32,7 +32,6 @@
     "errorhandler": "^1.5.0",
     "express": "^4.16.3",
     "express-jwt": "^5.3.1",
-    "express-session": "^1.15.6",
     "express-validator": "^5.3.1",
     "jsonwebtoken": "^8.5.0",
     "method-override": "^2.3.10",
