--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "babel-preset-es2015": "^6.24.1",
     "bcrypt": "^3.0.4",
     "body-parser": "^1.18.3",
+    "cloudinary": "^1.13.2",
     "cors": "^2.8.4",
     "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
@@ -39,6 +40,8 @@
     "mongoose": "^5.4.16",
     "mongoose-unique-validator": "^2.0.1",
     "morgan": "^1.9.0",
+    "multer": "^1.4.1",
+    "multer-storage-cloudinary": "^2.2.1",
     "nodemailer": "^5.1.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
