--- a/.eslintignore
+++ b/.eslintignore
@@ -1,6 +1,11 @@
 /dist/**
 /mochawesome-report/**
 /migrations
+/coverage/**
 /node_modules/**
 /.env/**
 /coverage/**
+.eslintrc.json
+package.json
+package-lock.json
+doc.json
