--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "errorhandler": "^1.5.0",
     "express": "^4.16.3",
     "express-jwt": "^5.3.1",
+    "express-session": "^1.15.6",
     "express-validator": "^5.3.1",
     "jsonwebtoken": "^8.5.0",
     "method-override": "^2.3.10",
@@ -39,9 +40,9 @@
     "mongoose": "^5.4.16",
     "mongoose-unique-validator": "^2.0.1",
     "morgan": "^1.9.0",
-    "nock": "^10.0.6",
     "multer": "^1.4.1",
     "multer-storage-cloudinary": "^2.2.1",
+    "nock": "^10.0.6",
     "nodemailer": "^5.1.1",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
