--- a/package.json
+++ b/package.json
@@ -57,6 +57,12 @@
     "swagger-ui-express": "^4.0.2",
     "underscore": "^1.9.1"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint && npm run test",
+      "pre-push": "npm run lint && npm run test"
+    }
+  },
   "devDependencies": {
     "babel-watch": "^2.0.7",
     "chai": "^4.2.0",
@@ -66,6 +72,7 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0",
     "faker": "^4.1.0",
+    "husky": "^1.3.1",
     "mocha": "^6.0.2",
     "mochawesome": "^3.1.1",
     "nyc": "^13.3.0"
