--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "@babel/core": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
     "@babel/register": "^7.0.0",
-    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "axios": "^0.18.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
+    "babel-plugin-transform-es2015-destructuring": "^6.23.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "bcrypt": "^3.0.4",
     "body-parser": "^1.18.3",
@@ -43,7 +44,6 @@
     "morgan": "^1.9.0",
     "multer": "^1.4.1",
     "multer-storage-cloudinary": "^2.2.1",
-    "nock": "^10.0.6",
     "nodemailer": "^5.1.1",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
@@ -75,10 +75,11 @@
     "eslint-plugin-import": "^2.16.0",
     "faker": "^4.1.0",
     "husky": "^1.3.1",
-    "mocha": "^6.0.2",
+    "mocha": "^6.1.3",
     "mochawesome": "^3.1.1",
+    "nock": "^10.0.6",
     "nyc": "^13.3.0",
-    "sinon": "^7.2.7",
+    "sinon": "^7.3.2",
     "sinon-chai": "^3.3.0"
   }
 }
