eat(notifications): implement in-app and email notifications
- create the notifications controller to handle notifications
- create the function to send email notifications
- configure pusher to trigger in-app notifications

[Delivers #165594898]

--- a/.env.sample
+++ b/.env.sample
@@ -7,3 +7,23 @@ JWT_SECRET=
 EMAIL_ADDRESS=
 EMAIL_PASSWORD=
 HOST_URL=
+FACEBOOK_CLIENT_ID=
+FACEBOOK_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+TWITTER_CONSUMER_KEY=
+TWITTER_CONSUMER_SECRET=
+SECRET=
+SUPER_ADMIN_EMAIL=
+SUPER_ADMIN_PASSWORD=
+SUPER_ADMIN_NAME=
+SUPER_ADMIN_USERNAME=
+SUPER_ADMIN_ROLE=
+SUPER_ADMIN_VERIFIED_STATUS=
+CLOUD_NAME=
+API_KEY=
+API_SECRET=
+PUSHER_APP_ID=
+PUSHER_APP_KEY=
+PUSHER_APP_SECRET=
+PUSHER_APP_CLUSTER=
